--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -107,7 +107,7 @@
     </div>
   </div>
   <!-- END OF MODALS -->
-  <li><button id="logout" href="/logout" class="navbarbtn btn btn-warning">Logout</button></li>
+  <li><a id="logout" href="/logout" class="navbarbtn btn btn-warning">Logout</a></li>
 
     </p> </ul>
   </div>
