--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,19 +10,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="scripts.js"></script>
+  <link type="text/css" rel="stylesheet" href="styles.css">
 
   <title>Simple Login</title>
 </head>
 <body>
+  <% include navbar %>
   <div class="container text-center">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1>Profile</h1>
+        <h1 id="profile-title">Profile</h1>
+        <h3>Welcome <%= user %></h3>
         <hr>
       <hr>
-      <% include navbar %>
+      
 
-<a id="logout" href="/logout" class="btn btn-default">Log Out</a>
+<!-- <button id="logout" href="/logout" class="btn btn-default">Log Out</button> -->
       </div>
     </div>
   </div>
