--- a/public/styles.css
+++ b/public/styles.css
@@ -1,100 +1,8 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-    width:100%;
-    height:100%;
-    text-align:center;
-}
-.navbar-right {
-    margin-right: 20px; /*set margin this way in your custom styesheet*/
-  }
-.post1 {
-  color: white;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.navbar-btn{
-  display: inline;
-  color: #888888;
-  background-color: white; 
-}
-.navbarbtn:hover{     
-  border-bottom: 4px solid #f0ad4e;
-}
-.white{
-  color:white;
-}
-.ss{
-  letter-spacing: 10px;
-  font-size: 50px;
-  padding: 15px;
-  color: white;
-border: 5px double white;
-}
-#welcome, #bye{
-  background-color: #EEEEEE;
-  color: #888888;
-}
 body {
-    background-color: #FFFFFF;
+    background-color: salmon;
     text-align: center;
-    font-family: 'Jacques Francois', serif;
-}
-h4, .ss{
-  font-family: 'Questrial', sans-serif;
-}
-button, .btn, .toggle, .toggle-handle, div {
-  border-radius: 0 !important;
-}
-section {
-    padding: 160px;
 }
 hr {
     border: 0;
     border-bottom: 1px dashed #62DEDC;
-}
-#intro{
-    background:-webkit-linear-gradient(#51C4D6,#62DEDC);
-}
-.btn{
-  background-color: #62DEDC;
-  border: 0;
-}
-/*#toppost{
-    background: repeating-linear-gradient(
-  45deg,
-  #FFC30F,
-  #FFC30F 10px,
-  #F9D543 10px,
-  #F9D543 20px
-);*/
-   /*SKROLLR*/
-    background-size: cover;
-  /*  -webkit-transform: translate(0,100%);
-    transform: translate(0,100%);*/
-}/*
-h2{
-  position: absolute;
-  bottom: 5%;
-  right: 5%;
-  text-align: center;
-}*/
-form{
-    text-align: left;
-}
-.feelinglucky{
-  background-color: transparent;
-  border: 1px double white;
-}
-#profile-title {
-  margin-top: 100px;
-}
-#logout {
-    padding: 11%;
-    color: white;
-}
-#logout:hover {
-  background-color: orange;
 }
