--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,6 +22,8 @@
         <h1 id="profile-title">Profile</h1>
         <h3>Welcome <%= user %></h3>
         <hr>
+        <h1><=% user.firstname %>'\s' Bucketlist</h1>
+        <h1>Your Pictures</h1>
       <hr>
       
 
