--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
 <!-- FONTS -->
 <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<!-- BUTTONS -->
+<link rel="stylesheet" href="http://unicorn-ui.com/buttons/css/buttons.css">
     <link rel="stylesheet" href="styles.css">
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -21,6 +23,7 @@
   </head>
   <body>
 <header>
+
   <!--NAVBAR-->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
@@ -36,44 +39,9 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-<!--       <li><div class="btn-group" data-toggle="buttons">
-  <label class="btn btn-warning active">
-    <input type="radio" name="options" id="option1" autocomplete="off" checked>Newest
-  </label>
-  <label class="btn btn-info">
-    <input type="radio" name="options" id="option2" autocomplete="off">Votes
-  </label>
-</div></li> -->
-    </ul>
+    <!-- <ul class="nav navbar-nav"> LEFT SIDE ITEMS </ul> -->
     <ul class="nav navbar-nav navbar-right">
     <p class="navbar-btn">
-<!-- BOOTSTRAP TOGGLE -->
-<!-- <input type="checkbox" class="toggle" checked data-toggle="toggle" data-on="Latest" data-off="Popular " data-onstyle="info" data-offstyle="danger"> -->
-<!-- MODAL TRIGGER -->
-<li>      <button type="submit" id="submit" class="navbarbtn btn btn-warning" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button></li>
-<!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-<!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Share your picture!</h4>
-        </div>
-        <div class="modal-body" id="submitnewquotemodalbody">
-<!-- FORM -->
-<form id="newpost">
-img url
-<input type="text" placeholder="imgurl" name="imgurl" class="required">
-<input type="text" placeholder="location" name="location" class="required">
-<input type="text" placeholder="author" name="author" class="required"><hr>
-<button type="submit" class="btn btn-warning">Submit</button>
-</form>
-        </div>
-      </div>
-    </div>
-  </div>
 <!-- SIGNUP -->
 <!-- MODAL TRIGGER -->
 <li>
@@ -131,31 +99,35 @@ img url
     </div>
   </div>
   <!-- END OF MODALS -->
-  <li><button id="logout" href="/logout" class="navbarbtn btn btn-warning">Logout</button></li>
-
     </p> </ul>
   </div>
 </nav>
  </header>
+ <!-- NEW NAVBAR! -->     <section class="color-7">
+        <span class="cl-effect-21">
+          <a href="#">Chatoyant</a>
+          <a href="#">Ineffable</a>
+          <a href="#">Efficiency</a>
+          <a href="#">Mellifluous</a>
+          <a href="#">Serendipity</a>
+        </span>
+      </section>
 <!-- DB CONTENT -->
-<div id="content">
+<div id="page-wrap">
 <% for (var i=posts.length-1; i>=0; i--){ %>
+<article class="post">
 <section class="posts" id="toppost">
-<div class="post1">
-<h3><img src= "<%= posts[i].imgurl %>" width="100%"> </h3><br><%= posts[i].location %> 
+<h3><img src= "<%= posts[i].imgurl %>" width="100%"> </h3>
+  <button data-id="<%=posts[i].id %>" class="button button-large button-plain button-border" id="want">I WANT TO GO TO <%= posts[i].location %> </button>
+<br><input type="checkbox" id="star">
 <h5>by <%= posts[i].author %></h5>
 <hr>
-
 <button data-id="<%=posts[i].id %>" type="button" class="btn btn-warning deletebutton">&times;</button><br>
 <button id="vote" class="btn btn-warning"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></button>
 <button id="up" class="btn btn-warning movetoprev"><span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span></button>
 <button id="down" class="btn btn-warning movetonext"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></button>
 <button class="btn btn-warning movetonext">Next</button>
-
-
-
-</div>
-</section>
+</section></article>
 <% } %>
 
 <!-- SKROLLR -->
@@ -165,6 +137,7 @@ img url
 <!-- VALIDATE -->
 
 <script>
+
   $('form').validate();
 </script>
   </body>
