--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,6 +22,11 @@
         <h3>Welcome, <%= user.firstname %>!</h3>
         <hr>
         <h1><%= user.firstname %> <%= user.lastname %>'s Bucketlist</h1>
+        <ul>
+        <% for(var i=0; i<user.fav.length; i++){ %>
+        <li><%= user.fav[i] %></li>
+        <% } %>
+        </ul>
         <h1>Your Pictures</h1>
       <hr>
       
