--- a/public/styles.css
+++ b/public/styles.css
@@ -1,19 +1,3 @@
-* {
-  margin: 0; 
-  padding: 0; 
-}
-body {  
-  padding: 20px;
-  height: 500px;
-  overflow-y: hidden;
-      overflow-x: scroll;
-}
-tr { 
-  vertical-align: top;
-}
-.post { 
-  width: 500px; 
-}
 body {
     background-color: salmon;
     text-align: center;
@@ -22,15 +6,31 @@ hr {
     border: 0;
     /*border-bottom: 1px dashed #62DEDC;*/
 }
-section {
-    text-align: center;
+.postsection {
+    height: 600px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-
-.go {
-    position: absolute;
+.postsection:before {      /* create a full-height inline block pseudo-element */
+    content: ' ';
+    display: inline-block;
+    vertical-align: middle; /* vertical alignment of the inline element */
+    height: 100%;
+}
+.wanttogo {
+    /*position: absolute;*/
     top: 50%;
 }
-
+* {
+  margin: 0; 
+  padding: 0; 
+}
+tr { 
+  vertical-align: top;
+}
+.post { 
+  width: 900px; 
+}
 /* Effect 21: borders slight translate */
 .cl-effect-21 a {
   padding: 10px;
@@ -87,3 +87,5 @@ section {
   -moz-transform: translateY(0px);
   transform: translateY(0px);
 }
+
+
