--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-  <% include navbar %>
+  <% include navbar2 %>
   </header>
   <div class="container text-center">
     <div class="row">
@@ -23,10 +23,10 @@
         <h1 id="profile-title">Profile</h1>
         <h3>Welcome, <%= user.firstname %>!</h3>
         <hr>
-        <h1><%= user.firstname %> <%= user.lastname %>'s Bucketlist</h1>
+        <h1><%= user.firstname %>&nbsp;<%= user.lastname %>'s Bucketlist</h1>
         <ul>
         <% for(var i=0; i<user.fav.length; i++){ %>
-        <li id="li"><%= user.fav[i] %></li>
+        <li class="favplaces"><%= user.fav[i] %></li>
         <% } %>
         </ul>
 
